// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualMenu color tokens pins menu colors: menu 1`] = `
{
  "tokens": {
    "backgroundColor": "antiquewhite",
    "borderColor": "#969696",
  },
}
`;

exports[`ContextualMenu color tokens pins menu item colors: menu item 1`] = `
{
  "_overrides": {
    "disabled": {
      "tokens": {
        "backgroundColor": "antiquewhite",
        "color": "#B1B1B1",
      },
    },
    "focused": {
      "_overrides": {
        "hovered": {
          "tokens": {
            "borderColor": "transparent",
          },
        },
      },
      "tokens": {
        "backgroundColor": "#D2D2D2",
        "borderColor": "#969696",
        "color": "#262626",
      },
    },
    "hovered": {
      "tokens": {
        "backgroundColor": "#D2D2D2",
        "color": "#262626",
      },
    },
    "pressed": {
      "tokens": {
        "backgroundColor": "#B1B1B1",
        "color": "#262626",
      },
    },
  },
  "tokens": {
    "backgroundColor": "antiquewhite",
    "borderColor": "transparent",
    "color": "#262626",
  },
}
`;

exports[`ContextualMenu color tokens pins submenu colors: submenu 1`] = `
{
  "tokens": {
    "backgroundColor": "antiquewhite",
    "borderColor": "#969696",
  },
}
`;

exports[`ContextualMenu color tokens pins submenu item colors: submenu item 1`] = `
{
  "_overrides": {
    "disabled": {
      "tokens": {
        "backgroundColor": "antiquewhite",
        "color": "#B1B1B1",
      },
    },
    "focused": {
      "_overrides": {
        "hovered": {
          "tokens": {
            "borderColor": "transparent",
          },
        },
      },
      "tokens": {
        "backgroundColor": "#D2D2D2",
        "borderColor": "#969696",
        "color": "#262626",
      },
    },
    "pressed": {
      "tokens": {
        "backgroundColor": "#B1B1B1",
        "color": "#262626",
      },
    },
  },
  "icon": {
    "style": {
      "color": "#262626",
    },
  },
  "tokens": {
    "backgroundColor": "antiquewhite",
    "borderColor": "transparent",
    "color": "#262626",
  },
}
`;
